<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="136dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="48dp"
        android:text="@string/registration"
        android:textColor="@color/subBackground"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fstTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="249dp"
        android:text="@string/full_name"
        android:textColor="@color/subBackground"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginscrn" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="28dp"
        android:background="@color/subBackground"

        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/secTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fstTxt" />

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="2dp"
        android:text="@string/emailtext"
        android:textColor="@color/subBackground"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="97dp"
        android:background="@color/subBackground"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/thirdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secTxt" />

    <TextView
        android:id="@+id/thirdTxt"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="247dp"
        android:text="@string/password"
        android:textColor="@color/subBackground"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="85dp"
        android:background="@color/subBackground"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdTxt" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="68dp"
        android:background="@color/logincolor"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/lnkLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPwd" />

    <TextView
        android:id="@+id/lnkLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="114dp"
        android:gravity="center"
        android:onClick="test"
        android:text="@string/already_registered_login_here"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:textColor="@color/subBackground"/>
</androidx.constraintlayout.widget.ConstraintLayout>