<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project_source_codes.MainActivity"
    android:background="@color/colorBackground"
    >


    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="162dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="61dp"
        android:text="@string/login"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/subBackground"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="8dp"
        android:text="@string/emailtext"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/subBackground"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="254dp"
        android:layout_height="24dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="12dp"
        android:background="@color/subBackground"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/secTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fstTxt" />

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="249dp"
        android:layout_marginBottom="3dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/txtPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:textStyle="bold"
        android:textColor="@color/subBackground"
        />

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="252dp"
        android:layout_height="24dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="76dp"
        android:background="@color/subBackground"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secTxt" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="242dp"
        android:layout_height="44dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="117dp"
        android:background="@color/logincolor"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/lnkRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPwd" />

    <TextView
        android:id="@+id/lnkRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:gravity="center"

        android:text="@string/new_to_smartden_register_here"
        android:textColor="@color/subBackground"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>